# SREES_2026_Babic_CBPF

./: .gitignore  .gitmodules  Makefile  README.md
docs/: Seminarski_StrujniBalans.lyx  Seminarski_StrujniBalans.md  Seminarski_StrujniBalans.tex  Seminarski_StrujniBalans_EN.lyx
docs/diagrams/: 01_jednopolna_case9.odg  02_tok_konverzije.odg
presentation/: Govor.txt  Prezentacija_CBPF.pptx  Prezentacija_CBPF.tex  ReadMe.txt
src/CurrentBalancePlugin/: CBPlugin.cmake  CMakeLists.txt
src/CurrentBalancePlugin/src/: CBPlugin.cpp  Converter.h  DynEmit.h  ViewConv.h  WindowPlugin.h
src/tools/cbconv/: cbconv.cpp  cbdyn.cpp  checks.py  validate.py
src/tools/cbconv/cases/: case9.m
src/tools/cbgen/: CMakeLists.txt  main.cpp
src/tools/dynsolve/: CMakeLists.txt  DynSolve.cmake
src/tools/dynsolve/src/: main.cpp
src/tools/pfsolve/: CMakeLists.txt  PFSolve.cmake
src/tools/pfsolve/src/: main.cpp
