cmake_minimum_required(VERSION 3.18)
set(SOLUTION_NAME CBGenSol)
project(${SOLUTION_NAME})
set(SOURCE_ROOT ${CMAKE_CURRENT_LIST_DIR})
set(HOME_ROOT $ENV{HOME})
set(NATID_SDK_ROOT ${HOME_ROOT}/natID.SDK)
include(${NATID_SDK_ROOT}/DevEnv/Common.cmake)
include(${NATID_SDK_ROOT}/DevEnv/MatrixLib.cmake)
set(N cbgen)
file(GLOB SRC ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
add_executable(${N} ${SRC})
target_link_libraries(${N} debug ${MU_LIB_DEBUG} optimized ${MU_LIB_RELEASE} debug ${MATRIX_LIB_DEBUG} optimized ${MATRIX_LIB_RELEASE})
setIDEPropertiesForExecutable(${N})
